--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.4",
     "clsx": "latest",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-persist": "6.0.0"
   },
   "scripts": {
     "dev": "next",
